// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Radio inputProps should pass through other props to the input 1`] = `
<div
  className="root"
>
  <input
    checked={true}
    className="input"
    data-automation="first-name-field"
    id="testRadio"
    onChange={[Function]}
    type="radio"
  />
  <label
    className="label"
    htmlFor="testRadio"
  >
    <svg
      className="svg"
      focusable="false"
      viewBox="0 0 200 200"
      xmlns="http://www.w3.org/2000/svg"
    >
      <circle
        className="circle circle_isHover"
        cx="100"
        cy="100"
        r="100"
      />
      <circle
        className="circle circle_isSelected"
        cx="100"
        cy="100"
        r="100"
      />
    </svg>
    <Text
      baseline={false}
      className="labelText"
      raw={true}
    >
      Still in role
    </Text>
  </label>
</div>
`;

exports[`Radio should render with className 1`] = `
<div
  className="root testClassname"
>
  <input
    checked={false}
    className="input"
    id="testRadio"
    onChange={[Function]}
    type="radio"
  />
  <label
    className="label"
    htmlFor="testRadio"
  >
    <svg
      className="svg"
      focusable="false"
      viewBox="0 0 200 200"
      xmlns="http://www.w3.org/2000/svg"
    >
      <circle
        className="circle circle_isHover"
        cx="100"
        cy="100"
        r="100"
      />
      <circle
        className="circle circle_isSelected"
        cx="100"
        cy="100"
        r="100"
      />
    </svg>
    <Text
      baseline={false}
      className="labelText"
      raw={true}
    >
      Still in role
    </Text>
  </label>
</div>
`;

exports[`Radio should render with simple props 1`] = `
<div
  className="root"
>
  <input
    checked={false}
    className="input"
    id="testRadio"
    onChange={[Function]}
    type="radio"
  />
  <label
    className="label"
    htmlFor="testRadio"
  >
    <svg
      className="svg"
      focusable="false"
      viewBox="0 0 200 200"
      xmlns="http://www.w3.org/2000/svg"
    >
      <circle
        className="circle circle_isHover"
        cx="100"
        cy="100"
        r="100"
      />
      <circle
        className="circle circle_isSelected"
        cx="100"
        cy="100"
        r="100"
      />
    </svg>
    <Text
      baseline={false}
      className="labelText"
      raw={true}
    >
      Still in role
    </Text>
  </label>
</div>
`;
